k8s/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: static-websites
  name: jargonary-website
  labels:
    app: jargonary-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jargonary-website
  template:
    metadata:
      labels:
        app: jargonary-website
    spec:
      containers:
      - name: jargonary-website
        image: "ghcr.io/jargonary/jargonary.org:latest"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: static-websites
  name: jargonary-website
  labels:
    app: jargonary-website
spec:
  type: ClusterIP
  selector:
    app: jargonary-website
  ports:
    - protocol: TCP
      name: http
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: static-websites
  name: jargonary-website-redirect
  labels:
    app: jargonary-website
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/permanent-redirect: "https://jargonary.feliciano.tech"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jargonary.org
    - www.jargonary.org
    secretName: jargonary-website-tls-redirect
  rules:
  - host: jargonary.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jargonary-website
            port:
              number: 80
  - host: www.jargonary.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jargonary-website
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: static-websites
  name: jargonary-website
  labels:
    app: jargonary-website
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jargonary.feliciano.tech
    secretName: jargonary-website-tls
  rules:
  - host: jargonary.feliciano.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jargonary-website
            port:
              number: 80
